Cleaned up landing page.

--- a/views/score.erb
+++ b/views/score.erb
@@ -1,2 +1,5 @@
 <h1>Your Scrabble Score:</h1>
-<h2><%= @score %></h2>
+
+<h2>Your submitted word was: "<%= @word %>"</h2>
+
+<h2>Your Scrabble Score is: <%= @score %></h2>
